--- a/_tmux.conf
+++ b/_tmux.conf
@@ -3,10 +3,8 @@ set -g prefix C-l
 unbind r
 bind r source-file ~/.tmux.conf
 
-set -g base-index 1
-setw -g pane-base-index 1
-set -g default-terminal "screen-256color"
-
+# user's short-keys
+# =================
 bind o split-window -h
 bind e split-window -v
 bind C-o split-window -h
@@ -21,3 +19,22 @@ bind h select-pane -L
 bind j select-pane -D
 bind l select-pane -R
 bind k select-pane -U
+
+# set-option
+# =================
+set -g base-index 1
+set -g default-shell "/bin/bash"
+set -g default-terminal "screen-256color"
+set -g display-time 2000
+set -g history-limit 10000
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+set -g status-keys vi
+set -g status-right "%H:%M %y/%m/%d"
+
+# set-window-option
+# =================
+set -g mode-keys vi
+# set -g mode-mouse on
+set -g pane-base-index 1
