--- a/_tmux.conf
+++ b/_tmux.conf
@@ -12,13 +12,13 @@ bind C-e split-window -v
 
 bind C-h select-pane -L
 bind C-j select-pane -D
-bind C-l select-pane -R
 bind C-k select-pane -U
+bind C-l select-pane -R
 
-bind h select-pane -L
-bind j select-pane -D
-bind l select-pane -R
-bind k select-pane -U
+bind h resize-pane -L 10
+bind j resize-pane -D 10
+bind k resize-pane -U 10
+bind l resize-pane -R 10
 
 # set-option
 # =================
